rstudio/allow-cloudflared-to-rstudio.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cloudflared-to-rstudio
  namespace: rstudio
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rstudio
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: cloudflared
          podSelector:
            matchLabels:
              app: cloudflared
      ports:
        - protocol: TCP
          port: 8787
